--- a/public/reset-password/index.html
+++ b/public/reset-password/index.html
@@ -38,21 +38,9 @@
         }
 
         .logo-icon {
-            width: 72px;
-            height: 72px;
-            background: linear-gradient(135deg, #3b82f6, #8b5cf6);
-            border-radius: 18px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            width: 80px;
+            height: 80px;
             margin: 0 auto 16px;
-            box-shadow: 0 8px 24px rgba(59, 130, 246, 0.25);
-        }
-
-        .logo-icon svg {
-            width: 36px;
-            height: 36px;
-            fill: white;
         }
 
         .logo h1 {
@@ -330,13 +318,8 @@
             }
 
             .logo-icon {
-                width: 64px;
-                height: 64px;
-            }
-
-            .logo-icon svg {
-                width: 32px;
-                height: 32px;
+                width: 72px;
+                height: 72px;
             }
 
             .logo h1 {
@@ -366,9 +349,22 @@
     <div class="container">
         <div class="card">
             <div class="logo">
+                <!-- أيقونة التطبيق - الحقيبة -->
                 <div class="logo-icon">
-                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M20 6h-4V4c0-1.11-.89-2-2-2h-4c-1.11 0-2 .89-2 2v2H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zm-6 0h-4V4h4v2z"/>
+                    <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg">
+                        <defs>
+                            <linearGradient id="bgGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                                <stop offset="0%" style="stop-color:#60a5fa;stop-opacity:1" />
+                                <stop offset="100%" style="stop-color:#a78bfa;stop-opacity:1" />
+                            </linearGradient>
+                        </defs>
+                        <rect width="80" height="80" rx="18" fill="url(#bgGradient)"/>
+                        <g transform="translate(18, 22)">
+                            <path d="M10 0C10 0 10 4 10 6L34 6C34 4 34 0 34 0C34 0 30 0 22 0C14 0 10 0 10 0Z" fill="white" opacity="0.9"/>
+                            <rect x="4" y="8" width="36" height="28" rx="4" fill="none" stroke="white" stroke-width="3.5"/>
+                            <line x1="22" y1="8" x2="22" y2="36" stroke="white" stroke-width="3"/>
+                            <circle cx="22" cy="22" r="3" fill="white"/>
+                        </g>
                     </svg>
                 </div>
                 <h1>مهنتي لي</h1>
