--- a/public/reset-password/index.html
+++ b/public/reset-password/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>إعادة تعيين كلمة المرور - مهنتي لي</title>
+    <title>مهنتي لي</title>
     <style>
         * {
             margin: 0;
@@ -71,19 +71,9 @@
             position: relative;
         }
 
-        .input-wrapper svg {
-            position: absolute;
-            right: 14px;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 20px;
-            height: 20px;
-            fill: #9ca3af;
-        }
-
         .form-group input {
             width: 100%;
-            padding: 14px 44px 14px 14px;
+            padding: 14px 14px;
             border: 2px solid #e5e7eb;
             border-radius: 12px;
             font-size: 16px;
@@ -116,24 +106,17 @@
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #3b82f6, #8b5cf6);
+            background: #3b82f6;
             color: white;
-            box-shadow: 0 4px 14px rgba(59, 130, 246, 0.3);
         }
 
-        .btn-primary:hover {
-            transform: translateY(-1px);
-            box-shadow: 0 6px 20px rgba(59, 130, 246, 0.4);
-        }
-
-        .btn-primary:active {
-            transform: translateY(0);
+        .btn-primary:hover:not(:disabled) {
+            background: #2563eb;
         }
 
         .btn:disabled {
             opacity: 0.6;
             cursor: not-allowed;
-            transform: none !important;
         }
 
         .alert {
@@ -143,6 +126,8 @@
             font-size: 14px;
             font-weight: 500;
             display: none;
+            white-space: pre-wrap;
+            word-break: break-word;
         }
 
         .alert-error {
@@ -186,7 +171,7 @@
         .success-icon {
             width: 72px;
             height: 72px;
-            background: linear-gradient(135deg, #22c55e, #16a34a);
+            background: #22c55e;
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -253,7 +238,7 @@
         .error-icon {
             width: 72px;
             height: 72px;
-            background: linear-gradient(135deg, #ef4444, #dc2626);
+            background: #ef4444;
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -280,10 +265,37 @@
             line-height: 1.6;
         }
 
-        .password-requirements {
+        .password-strength {
+            margin-top: 12px;
+            padding: 12px;
+            border-radius: 8px;
             font-size: 12px;
-            color: #9ca3af;
-            margin-top: 6px;
+            background: #f0f9ff;
+            border: 1px solid #bfdbfe;
+        }
+
+        .strength-item {
+            display: flex;
+            align-items: center;
+            padding: 4px 0;
+            color: #6b7280;
+        }
+
+        .strength-icon {
+            width: 16px;
+            height: 16px;
+            border-radius: 50%;
+            margin-left: 8px;
+            background: #d1d5db;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 10px;
+            color: white;
+        }
+
+        .strength-icon.valid {
+            background: #22c55e;
         }
 
         /* Loading State */
@@ -327,20 +339,12 @@
             }
 
             .form-group input {
-                padding: 12px 40px 12px 12px;
+                padding: 12px;
                 font-size: 16px;
             }
 
             .btn {
                 padding: 12px;
-            }
-        }
-
-        /* Safe area for notched phones */
-        @supports (padding-top: env(safe-area-inset-top)) {
-            body {
-                padding-top: max(20px, env(safe-area-inset-top));
-                padding-bottom: max(20px, env(safe-area-inset-bottom));
             }
         }
     </style>
@@ -349,12 +353,10 @@
     <div class="container">
         <div class="card">
             <div class="logo">
-                <!-- شعار التطبيق الجديد -->
                 <div class="logo-icon">
                     <img src="/assets/app-logo.jpg" alt="مهنتي لي" style="width: 80px; height: 80px; border-radius: 18px; object-fit: cover;">
                 </div>
                 <h1>مهنتي لي</h1>
-                <p>إعادة تعيين كلمة المرور</p>
             </div>
 
             <!-- Loading State -->
@@ -381,21 +383,36 @@
                 <div class="form-group">
                     <label>كلمة المرور الجديدة</label>
                     <div class="input-wrapper">
-                        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"/>
-                        </svg>
-                        <input type="password" id="password" placeholder="أدخل كلمة المرور الجديدة" required minlength="6">
+                        <input type="password" id="password" placeholder="أدخل كلمة المرور الجديدة" required>
                     </div>
-                    <p class="password-requirements">يجب أن تكون 6 أحرف على الأقل</p>
+                    <div class="password-strength" id="passwordStrength">
+                        <div class="strength-item">
+                            <span>8 أحرف على الأقل</span>
+                            <span class="strength-icon" id="check1">✗</span>
+                        </div>
+                        <div class="strength-item">
+                            <span>حرف كبير (A-Z)</span>
+                            <span class="strength-icon" id="check2">✗</span>
+                        </div>
+                        <div class="strength-item">
+                            <span>حرف صغير (a-z)</span>
+                            <span class="strength-icon" id="check3">✗</span>
+                        </div>
+                        <div class="strength-item">
+                            <span>رقم (0-9)</span>
+                            <span class="strength-icon" id="check4">✗</span>
+                        </div>
+                        <div class="strength-item">
+                            <span>رمز خاص (@#$%^&*)</span>
+                            <span class="strength-icon" id="check5">✗</span>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="form-group">
                     <label>تأكيد كلمة المرور</label>
                     <div class="input-wrapper">
-                        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"/>
-                        </svg>
-                        <input type="password" id="confirmPassword" placeholder="أعد إدخال كلمة المرور" required minlength="6">
+                        <input type="password" id="confirmPassword" placeholder="أعد إدخال كلمة المرور" required>
                     </div>
                 </div>
 
@@ -433,6 +450,7 @@
         const submitBtn = document.getElementById('submitBtn');
         const btnText = document.getElementById('btnText');
         const btnLoading = document.getElementById('btnLoading');
+        const passwordInput = document.getElementById('password');
 
         // Get API base URL (same origin)
         const API_BASE = window.location.origin;
@@ -488,6 +506,37 @@
             btnLoading.classList.toggle('show', loading);
         }
 
+        // Password strength validation
+        function validatePasswordStrength(password) {
+            const checks = {
+                length: password.length >= 8,
+                uppercase: /[A-Z]/.test(password),
+                lowercase: /[a-z]/.test(password),
+                number: /[0-9]/.test(password),
+                special: /[@#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]/.test(password),
+                noArabic: !/[\u0600-\u06FF]/.test(password),
+                noArabicNumbers: !/[\u0660-\u0669]/.test(password)
+            };
+
+            // Update UI
+            document.getElementById('check1').classList.toggle('valid', checks.length);
+            document.getElementById('check2').classList.toggle('valid', checks.uppercase);
+            document.getElementById('check3').classList.toggle('valid', checks.lowercase);
+            document.getElementById('check4').classList.toggle('valid', checks.number);
+            document.getElementById('check5').classList.toggle('valid', checks.special);
+
+            // Check all requirements (including no Arabic)
+            const allValid = checks.length && checks.uppercase && checks.lowercase && 
+                           checks.number && checks.special && checks.noArabic && checks.noArabicNumbers;
+
+            return allValid;
+        }
+
+        // Listen to password input
+        passwordInput.addEventListener('input', () => {
+            validatePasswordStrength(passwordInput.value);
+        });
+
         // Handle form submission
         resetForm.addEventListener('submit', async (e) => {
             e.preventDefault();
@@ -497,8 +546,8 @@
             const confirmPassword = document.getElementById('confirmPassword').value;
 
             // Validation
-            if (password.length < 6) {
-                showAlert('كلمة المرور يجب أن تكون 6 أحرف على الأقل');
+            if (!validatePasswordStrength(password)) {
+                showAlert('كلمة المرور لا تستوفي متطلبات القوة. يرجى التحقق من المتطلبات أعلاه.');
                 return;
             }
 
@@ -523,7 +572,11 @@
                 if (response.ok && data.success) {
                     showSuccess();
                 } else {
-                    showAlert(data.message || 'حدث خطأ. يرجى المحاولة مرة أخرى');
+                    let errorMessage = data.message || 'حدث خطأ. يرجى المحاولة مرة أخرى';
+                    if (data.errors && Array.isArray(data.errors)) {
+                        errorMessage = data.errors.join('\n');
+                    }
+                    showAlert(errorMessage);
                     setLoading(false);
                 }
             } catch (err) {
